--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@stripe/react-stripe-js": "^3.7.0",
     "@stripe/stripe-js": "^7.3.1",
     "@tanstack/react-query": "^5.80.5",
+    "ethers": "^5.7.2",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
+    "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "stripe": "^18.2.1",
